# locations-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  api-spec.md  bench-3-impls.py  bench-closest.py  render-tests.py  requirements.txt  rustfmt.toml  test-image.py
elasticsearch/: Dockerfile  README.md  docker-compose.yml  dump-es-indices-and-data.py  index-data-city.ndjson  index-data-region.ndjson  index-mapping-city_v1.json  index-mapping-region_v1.json
src/: error.rs  errors.rs  main.rs  response.rs
src/handlers/: city.rs  fallback.rs  mod.rs
src/services/: locations_repo.rs
src/stateful/: elasticsearch.rs  mod.rs
