[package]
name = "locations-rs"
version = "0.1.0"
authors = ["Matěj Laitl <matej@laitl.cz>"]
edition = "2018"

[dependencies]
elasticsearch = "7.9.0-alpha.1"
dashmap = "3.9"
env_logger = "0.7"
futures = "0.3"
log = "0.4"
once_cell = "1.3"
pretty_env_logger = "0.4"
rocket = { version = "0.5.0-dev", git = "https://github.com/SergioBenitez/Rocket.git", rev = "1369dc4", default-features = false }
rocket_contrib = { version = "0.5.0-dev", git = "https://github.com/SergioBenitez/Rocket.git", rev = "1369dc4", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
single = "1.0"
thiserror = "1.0"
validator = { version = "0.11", features = ["derive"] }

[profile.release]
lto = "fat"
codegen-units = 1
