[package]
name = "locations-rs"
version = "0.1.0"
authors = ["Matěj Laitl <matej@laitl.cz>"]
edition = "2018"

[dependencies]
elasticsearch = "7.9.0-alpha.1"
dashmap = "3.9"
env_logger = "0.7"
futures = "0.3"
log = "0.4"
once_cell = "1.3"
pretty_env_logger = "0.4"
rocket = "0.4.5"
rocket_contrib = { version = "0.4.5", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
single = "1.0"
thiserror = "1.0"
tokio = { version = "0.2", features = ["full"] }
validator = { version = "0.11", features = ["derive"] }

[profile.release]
lto = "fat"
codegen-units = 1

[patch.crates-io]
hyper = { version = "0.10", git = "https://github.com/strohel/hyper.git", branch = "0.10.x" }
